[gd_scene load_steps=19 format=3 uid="uid://b0bytebkv3ipd"]

[ext_resource type="Script" path="res://scripts/slime_double.gd" id="1_jr5el"]
[ext_resource type="Texture2D" uid="uid://byi4lletuhol7" path="res://assets/sprites/slime_purple.png" id="2_2u8hs"]
[ext_resource type="PackedScene" uid="uid://ba78272pqwtmf" path="res://scenes/killzone.tscn" id="3_ukcbl"]
[ext_resource type="PackedScene" uid="uid://bttig8hfecwo2" path="res://scenes/hurtbox_component.tscn" id="4_07lde"]
[ext_resource type="AudioStream" uid="uid://dqnwo8d1ljeel" path="res://assets/sounds/hurt.wav" id="4_onjst"]
[ext_resource type="PackedScene" uid="uid://d3gll0k6rbcpb" path="res://scenes/health_component.tscn" id="5_p273j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3kucx"]
atlas = ExtResource("2_2u8hs")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xq5e"]
atlas = ExtResource("2_2u8hs")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_73ivy"]
atlas = ExtResource("2_2u8hs")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fxgm"]
atlas = ExtResource("2_2u8hs")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hiave"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kucx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xq5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73ivy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fxgm")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0uc4"]
size = Vector2(8, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfoj8"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3sj30"]
size = Vector2(20, 6)

[sub_resource type="Animation" id="Animation_78y6f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Killzone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeadSlimeSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cx1g3"]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Killzone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeadSlimeSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k7yyc"]
_data = {
"RESET": SubResource("Animation_78y6f"),
"destroy": SubResource("Animation_cx1g3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j0ena"]
size = Vector2(176, 16)

[node name="Slime_Double" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_jr5el")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_hiave")
autoplay = "default"
frame = 2
frame_progress = 0.864288

[node name="SlimeCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_b0uc4")

[node name="Killzone" parent="." instance=ExtResource("3_ukcbl")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_gfoj8")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(9, 0)
collision_mask = 5

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(10, -7)
target_position = Vector2(0, 15)

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_07lde")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_3sj30")

[node name="DeadSlimeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_onjst")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k7yyc")
}

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(1, -9)
scale = Vector2(9.8, 9)

[node name="HealthComponent" parent="." instance=ExtResource("5_p273j")]

[node name="DetectPlayer" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_j0ena")
debug_color = Color(0.611911, 0.534741, 0.171173, 0.42)

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
